completed the api gateway for teh order service
